Coded win check & rendering game grid to screen

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     </section>
 
     <!-- Pipeline Puzzle game banner -->
-    <section id="game-banner-section container">
+    <section id="game-banner-section" class="container">
         <div id="banner" class="d-flex justify-content-center align-items-center" >
             <h2 id="banner-text">PIPELINE PUZZLE</h2>
         </div>
     </section>
 
     <!-- Score & Time -->
-    <section id="stats-section container">
+    <section id="stats-section" class="container">
         <div class="d-flex justify-content-center gap-4 mt-2">
             <p id="score">💧 Score: [ ]</p>
             <p id="time">⏱️ Time: [ ]</p>
@@ -39,12 +39,12 @@
     </section>
 
     <!-- Game Section -->
-    <section id="game-section container">
+    <section id="game-section" class="d-flex justify-content-center">
         <div id="game-wrapper">
-            <!-- Game board goes here -->
-            
+
         </div>
     </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <script src="levels.js"></script>
     <script src="script.js"></script>
