--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8"/>
         <title>charity: water - Pipeline Puzzle</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
         <link href="style.css" rel="stylesheet">
     </head>
@@ -33,7 +36,7 @@
     <!-- Score & Time -->
     <section id="stats-section" class="container">
         <div class="d-flex justify-content-center gap-4 mt-2">
-            <p id="score">💧 Score: [ ]</p>
+            <p id="score">💧 Score: 0</p>
             <p id="time"></p>
         </div>
     </section>
@@ -56,11 +59,13 @@
             </div>
             <div id="gameStartModalBody">
                 <h2>How-To-Play</h2>
-                <p>Welcome to Pipeline Puzzle! Click on two pipes to swap them, and build
-                a water line from the water spout to the community marked by the yellow house!</p>
+                <p>Click on two pipes to swap them, and build
+                a water line from the water spout to the community marked by the yellow house!<br>
+                Building the water line faster earns more points.</p>
             </div>
             <div class="modal-footer">
                 <button type="button" id="startButton" class="btn btn-secondary" data-bs-dismiss="modal">Play</button>
+                <button type="button" id="cwSiteButton" class="btn btn-secondary" onclick="learnMore()">Learn More</button>
             </div>
             </div>
         </div>
@@ -75,10 +80,11 @@
             </div>
             <div id="nextLevelModalBody">
                 <p>Great job! Hit "Continue" to go to the next level.</p>
-                <p>Did you know: [TODO: insert trivia]</p>
+                <p id="triviaSection"></p>
             </div>
             <div class="modal-footer">
                 <button type="button" id="nextLevelButton" class="btn btn-secondary" data-bs-dismiss="modal">Play</button>
+                <button type="button" id="cwSiteButton" class="btn btn-secondary" onclick="learnMore()">Learn More</button>
             </div>
             </div>
         </div>
@@ -97,7 +103,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" id="resetButton" class="btn btn-secondary" data-bs-dismiss="modal">Reset Game</button>
-                <button type="button" id="cwSiteButton" class="btn btn-secondary">Learn more</button>
+                <button type="button" id="cwSiteButton" class="btn btn-secondary" onclick="learnMore()">Learn More</button>
             </div>
             </div>
         </div>
@@ -111,7 +117,7 @@
                 <h1 class="modal-title fs-5" id="resetGameModalHd"></h1>
             </div>
             <div id="resetGameModalBody">
-                <h2>Reset Game?</h2>
+                <h2 id="modalHeader">Reset Game?</h2>
             </div>
             <div class="modal-footer">
                 <button type="button" id="menuResetButton" class="btn btn-secondary" data-bs-dismiss="modal">Yes</button>
@@ -140,7 +146,7 @@
 
        <!-- Pause Modal -->
     <div class="modal" id="pauseGameModal" tabindex="-1" aria-labelledby="pauseGameModalBody" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
-        <div class="modal-dialog modal-dialog-centered modal-position">
+        <div class="modal-dialog modal-position">
             <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="pauseGameModalHd"></h1>
