--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 <h1 class="modal-title fs-5" id="nextLevelModalHd"></h1>
             </div>
             <div id="nextLevelModalBody">
+                <h2 id="currentScore"></h2>
                 <p class="modal-pg">Great job! Click "Next Level" to continue playing.</p>
                 <p id="triviaSection" class="modal-pg"></p>
             </div>
@@ -98,6 +99,7 @@
                 <h1 class="modal-title">All levels complete!</h1>
             </div>
             <div id="lastLevelModalBody">
+                <h2 id="finalScore"></h2>
                 <p class="modal-pg">Click below to learn more about how you can bring water to those in need!</p>
             </div>
             <div class="modal-footer">
