Bug fix on med-level-3

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="modal-dialog modal-position">
             <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title">All levels complete!</h1>
+                <h1 class="modal-title">All Levels Complete!</h1>
             </div>
             <div id="lastLevelModalBody">
                 <h2 id="finalScore"></h2>
