Some finishing touches

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     </section>
 
     <!-- Footer Section -->
-    <footer class="footer-area container-fluid text-center pt-1 pb-2 mt-5">
+    <footer class="footer-area container-fluid text-center pt-1 pb-2 mt-5 mb-3">
         <div class="row justify-content-center pt-1">
         <div class="col col-md-2">
             <a href="https://www.charitywater.org/donate" target="_blank">Donate</a>
         </div>
         <div class="col col-md-2">
-            <a href="https://www.charitywater.org/about" target="_blank">About Us</a>
+            <a href="https://www.charitywater.org/" target="_blank">About Us</a>
         </div>
         </div>
     </footer>
@@ -96,7 +96,7 @@
             <div id="nextLevelModalBody">
                 <h2 id="currentScore"></h2>
                 <p class="modal-pg p_text">Great job! Click "Next Level" to continue playing.</p>
-                <p class="milestoneSection"></p> <!-- Usually empty, used for milestone scores -->
+                <p class="p_text" id="milestoneSection"></p> <!-- Usually empty, used for milestone scores -->
                 <p id="triviaSection" class="modal-pg"></p>
             </div>
             <div class="modal-footer">
@@ -116,6 +116,7 @@
             </div>
             <div id="lastLevelModalBody">
                 <h2 id="finalScore"></h2>
+                <p class="p_text" id="lastScoreMilestone"></p>
                 <p class="modal-pg p_text">Click below to learn more about how you can bring water to those in need!</p>
             </div>
             <div class="modal-footer">
